# scsv

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/scsv/: scsv.py
